Resolves: tdf#113826 use brush vs background conversion mode of dialog

Change-Id: If33e1672048c570887c2c53da646f86852bc6a6c